--- a/about.html
+++ b/about.html
@@ -98,7 +98,7 @@
                             <ul>
                                 <li><a href="https://www.linkedin.com/in/yurianishimura/" target="_blank"><i class="iconmoon-linkedin2"></i></a></li>
                                 <li><a href="https://dribbble.com/yuria-n" target="_blank"><i class="iconmoon-dribbble"></i></a></li>
-                                <li><a href="https://github.com/Julia0709" target="_blank"><i class="iconmoon-github"></i></a></li>
+                                <li><a href="https://github.com/yuria-n" target="_blank"><i class="iconmoon-github"></i></a></li>
                                 <li><a href="https://www.instagram.com/yuria_n0709/?hl=en" target="_blank"><i class="iconmoon-instagram"></i></a></li>
                                 <li><a href="https://www.facebook.com/yuria.nishimura.3" target="_blank"><i class="iconmoon-facebook"></i></a></li>
                                 <li><a href="https://twitter.com/_juliannu" target="_blank"><i class="iconmoon-twitter"></i></a></li>
@@ -114,18 +114,18 @@
 
     <div class="container margin-top">
         <div class="main-title near-content">
-            <h1>YURIA NISHIMURA</h1>
+            <h1>YURIA MOTEGI</h1>
             <hr>
         </div>
         <div class="row">
             <div class="col-md-12">
                 <p style="font-size: 18px; line-height: 26px;">
-                    I’m a Frontend Developer familiar with UI/UX.
+                    I’m a Software Engineer with a keen focus on software architecture, frontend development and UI/UX.
                 </p>
                 <p>
-                    Please call me <strong>Julia</strong>, if it's easy to remember for you :)
-                    <br/>
-                    Get in touch with me on SNS or via Email at <strong>nishimura.yuria@gmail.com</strong>!
+                    My approach centers on solving problems through rational, clear UI design, always with the user's perspective in mind. I pride myself on writing clean, readable code that not only functions smoothly but also enhances maintainability.
+                    <br/><br/>
+                    Get in touch with me on social media or via email at <strong>yuria.motegi@gmail.com</strong>!
                 </p>
             </div>
         </div>
@@ -142,9 +142,10 @@
                                 <h1>MY BIO</h1>
                                 <hr>
                                 <p>
-                                    My specialty is solving problems through rational clear UI design from the view of users, and frontend development writing readable clean codes. The infinite potential and complex diversity of web technologies jerked my curiosity to know overwhelming ideas and technologies when I learned how to make a website.
+                                    My fascination with web technologies began when I first learned how to create a website. The infinite potential and complex diversity of the digital world sparked my curiosity, driving me to explore and master overwhelming ideas and innovative technologies. This passion is at the heart of everything I do, fueling my continuous pursuit of knowledge and excellence in the ever-evolving tech landscape.
                                     <br/><br/>
-                                    In my spare time, I love working on side projects with my friends, having tea and sweets, traveling, playing board games or video games, and cooking.                                </p>
+                                    In my spare time, I love working on side projects with friends, indulging in tea and sweets, and exploring new places. Whether playing board games, diving into video games, or experimenting with new recipes in the kitchen, I enjoy activities that challenge my creativity and bring joy to my day.
+                                </p>
                             </div>
                         </div>
                     </div>
@@ -158,7 +159,7 @@
         <div class="main-title">
             <h1>SKILLS & INTERESTS</h1>
             <hr>
-            <h6>My current skills and interests. Everything is connected and makes what I am today.</h6>
+            <h6>Current skills and interests: the building blocks of my identity.</h6>
         </div>
         <div class="services-home-page">
             <div class="row">
@@ -241,7 +242,7 @@
                         <ul class="social-media">
                             <li><a href="https://www.linkedin.com/in/yurianishimura/" target="_blank"><i class="iconmoon-linkedin2"></i></a></li>
                             <li><a href="https://dribbble.com/yuria-n" target="_blank"><i class="iconmoon-dribbble"></i></a></li>
-                            <li><a href="https://github.com/Julia0709" target="_blank"><i class="iconmoon-github"></i></a></li>
+                            <li><a href="https://github.com/yuria-n" target="_blank"><i class="iconmoon-github"></i></a></li>
                             <li><a href="https://www.instagram.com/yuria_n0709/?hl=en" target="_blank"><i class="iconmoon-instagram"></i></a></li>
                             <li><a href="https://www.facebook.com/yuria.nishimura.3" target="_blank"><i class="iconmoon-facebook"></i></a></li>
                             <li><a href="https://twitter.com/_juliannu" target="_blank"><i class="iconmoon-twitter"></i></a></li>
