--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
                             <ul>
                                 <li><a href="https://www.linkedin.com/in/yurianishimura/" target="_blank"><i class="iconmoon-linkedin2"></i></a></li>
                                 <li><a href="https://dribbble.com/yuria-n" target="_blank"><i class="iconmoon-dribbble"></i></a></li>
-                                <li><a href="https://github.com/Julia0709" target="_blank"><i class="iconmoon-github"></i></a></li>
+                                <li><a href="https://github.com/yuria-n" target="_blank"><i class="iconmoon-github"></i></a></li>
                                 <li><a href="https://www.instagram.com/yuria_n0709/?hl=en" target="_blank"><i class="iconmoon-instagram"></i></a></li>
                                 <li><a href="https://www.facebook.com/yuria.nishimura.3" target="_blank"><i class="iconmoon-facebook"></i></a></li>
                                 <li><a href="https://twitter.com/_juliannu" target="_blank"><i class="iconmoon-twitter"></i></a></li>
@@ -144,7 +144,7 @@
         <div class="main-title">
             <h1>WORK</h1>
             <hr>
-            <h6>My personal projects since 2015.</h6>
+            <h6>Highlights from my personal projects since 2015.</h6>
         </div>
         <div class="portfolio-wrapper">
             <button class="nav">
@@ -310,7 +310,7 @@
         <div class="main-title">
             <h1>SKILLS & INTERESTS</h1>
             <hr>
-            <h6>My current skills and interests. Everything is connected and makes what I am today.</h6>
+            <h6>Current skills and interests: the building blocks of my identity.</h6>
         </div>
         <div class="services-home-page">
             <div class="row">
@@ -357,11 +357,10 @@
                     <article>
                         <h1>ABOUT</h1>
                         <hr>
-                        <h4>Hi, I'm Yuria Nishimura.<br/>
-                            A Frontend Developer familiar with UI/UX.
-                        </h4>
+                        <h4>Hi, I'm Yuria Motegi.</h4>
                         <p>
-                            My specialty is solving problems through rational clear UI design from the view of users, and frontend development writing readable clean codes. The infinite potential and complex diversity of web technologies jerked my curiosity to know overwhelming ideas and technologies when I learned how to make a website.
+                            A Software Engineer with a keen focus on software architecture, frontend development and UI/UX.
+                            My approach centers on solving problems through rational, clear UI design, always with the user's perspective in mind. I pride myself on writing clean, readable code that not only functions smoothly but also enhances maintainability.
                             <br/><br/>
                             <a href="about.html">More about me →</a>
                         </p>
@@ -393,7 +392,7 @@
                         <ul class="social-media">
                             <li><a href="https://www.linkedin.com/in/yurianishimura/" target="_blank"><i class="iconmoon-linkedin2"></i></a></li>
                             <li><a href="https://dribbble.com/yuria-n" target="_blank"><i class="iconmoon-dribbble"></i></a></li>
-                            <li><a href="https://github.com/Julia0709" target="_blank"><i class="iconmoon-github"></i></a></li>
+                            <li><a href="https://github.com/yuria-n" target="_blank"><i class="iconmoon-github"></i></a></li>
                             <li><a href="https://www.instagram.com/yuria_n0709/?hl=en" target="_blank"><i class="iconmoon-instagram"></i></a></li>
                             <li><a href="https://www.facebook.com/yuria.nishimura.3" target="_blank"><i class="iconmoon-facebook"></i></a></li>
                             <li><a href="https://twitter.com/_juliannu" target="_blank"><i class="iconmoon-twitter"></i></a></li>
