--- a/project_03.html
+++ b/project_03.html
@@ -98,7 +98,7 @@
                             <ul>
                                 <li><a href="https://www.linkedin.com/in/yurianishimura/" target="_blank"><i class="iconmoon-linkedin2"></i></a></li>
                                 <li><a href="https://dribbble.com/yuria-n" target="_blank"><i class="iconmoon-dribbble"></i></a></li>
-                                <li><a href="https://github.com/Julia0709" target="_blank"><i class="iconmoon-github"></i></a></li>
+                                <li><a href="https://github.com/yuria-n" target="_blank"><i class="iconmoon-github"></i></a></li>
                                 <li><a href="https://www.instagram.com/yuria_n0709/?hl=en" target="_blank"><i class="iconmoon-instagram"></i></a></li>
                                 <li><a href="https://www.facebook.com/yuria.nishimura.3" target="_blank"><i class="iconmoon-facebook"></i></a></li>
                                 <li><a href="https://twitter.com/_juliannu" target="_blank"><i class="iconmoon-twitter"></i></a></li>
@@ -215,7 +215,7 @@
                         <ul class="social-media">
                             <li><a href="https://www.linkedin.com/in/yurianishimura/" target="_blank"><i class="iconmoon-linkedin2"></i></a></li>
                             <li><a href="https://dribbble.com/yuria-n" target="_blank"><i class="iconmoon-dribbble"></i></a></li>
-                            <li><a href="https://github.com/Julia0709" target="_blank"><i class="iconmoon-github"></i></a></li>
+                            <li><a href="https://github.com/yuria-n" target="_blank"><i class="iconmoon-github"></i></a></li>
                             <li><a href="https://www.instagram.com/yuria_n0709/?hl=en" target="_blank"><i class="iconmoon-instagram"></i></a></li>
                             <li><a href="https://www.facebook.com/yuria.nishimura.3" target="_blank"><i class="iconmoon-facebook"></i></a></li>
                             <li><a href="https://twitter.com/_juliannu" target="_blank"><i class="iconmoon-twitter"></i></a></li>
