--- a/project_10.html
+++ b/project_10.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Oh Designie | Yuria's Portfolio</title>
+    <title>Twinkle Sums | Yuria's Portfolio</title>
     <meta name="description" content="">
     <meta name="msapplication-tap-highlight" content="yes" />
     <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1, minimum-scale=1.0, maximum-scale=1.0" />
@@ -116,7 +116,7 @@
     <div class="container">
         <div 
             class="header-page ef-parallax-bg" 
-            style="background-image:url(img/project/09/img_header.jpg)">
+            style="background-image:url(img/project/10/img_header.jpg)">
         </div>
     </div>
 
@@ -125,11 +125,11 @@
         <div class="single-portfolio-wrapper">
             <div class="row">
                 <div class="col-md-8 col-sm-8 single-project-images">
-                    <h1>Oh Designie</h1>
+                    <h1>Twinkle Sums</h1>
                     <span class="info">Hybrid App: Development, UI Design, UX Design, Logo Design</span>
-                    <p>This is a mobile game app for learning design fundamentals having fun! There are several 20-second mini-games focused on color, typography or layout. The user can practice each game alone, or join an online 'Competition' to compete with another player.</p>
-                    <p>'Oh Designie' is a combination of 'about design' in Polish and 'rookie.' I hope this app will help people who are designers or interested in design.</p>
-                    <p>My largest personal project taught me how to work on through a project. Before starting this project, I did not know about TypeScript, Redux, HOC nor props at all. I only knew that React Native is the way to implement both iOS and Android app at the same time by writing JavaScript. So I started with setting up Expo with JavaScript. Now I can say I know ES6, how props and states work, and React lifecycle, but also how to define TypeScript types and how to use Redux!</p>
+                    <p>Twinkle Sums is a simple mental math app that helps users improve their arithmetic skills. The app presents users with quick, timed math problems that challenge their mental calculation abilities in a fun and stimulating way. It is perfect for users of all ages who want to sharpen their math skills on the go or just to kill time.</p>
+                    <p>The primary objective of Twinkle Sums is to provide an educational yet enjoyable tool for practicing mental arithmetic. By integrating a game-like environment with progressively challenging problems, the app aims to enhance users' numerical agility and accuracy. Whether for students seeking to improve their math performance or adults looking to keep their minds sharp, Twinkle Sums offers a convenient solution.</p>
+                    <p>Twinkle Sums was developed using React Native, allowing for seamless deployment on both Android and iOS platforms and ensuring a consistent user experience across different devices. The app includes local storage solutions that save users' game settings and statistical data, thereby enhancing personalization and convenience. The user interface was carefully designed to be both intuitive and visually appealing, making navigation and gameplay straightforward and enjoyable.</p>
                 </div>
                 <div class="col-md-3 col-md-offset-1 col-sm-4">
                     <div class="project-information">
@@ -137,7 +137,7 @@
                             <tbody>
                                 <tr>
                                     <td>Visit:</td>
-                                    <td><a href="https://lp.oh-designie.com/" target="_blank">Landing Page</a></td>
+                                    <td><a href="https://play.google.com/store/apps/details?id=com.littlesouthernbird.twinklesums&hl=en_CA&pli=1" target="_blank">Play Store</a></td>
                                 </tr>
                                 <tr>
                                     <td>Category:</td>
@@ -145,7 +145,7 @@
                                 </tr>
                                 <tr>
                                     <td>Date:</td>
-                                    <td>Jun 2018</td>
+                                    <td>Mar 2024</td>
                                 </tr>
                                 <tr>
                                     <td>Share:</td>
@@ -169,38 +169,20 @@
             <div class="row">
                 <div class="col-md-12">
                     <span class="info">Logo Design</span>
-                    <p>The logo represents a series of games in Oh Designie.</p>
+                    <p>The logo is inspired by arithmetic signs.</p>
                 </div>
                 <div class="col-md-12">
                     <div class="single-project-images">
-                        <img src="img/project/09/img_2.jpg" alt="logo">
+                        <img src="img/project/10/img_1.jpg" alt="logo">
                     </div>
                 </div>
                 <div class="col-md-12">
                     <span class="info">UI Design</span>
-                    <p>Since a game app, vitamin colors and pattern backgrounds are used to make it looks fun!</p>
+                    <p>Simple and clean UI for daily use.</p>
                 </div>
                 <div class="col-md-12">
                     <div class="single-project-images">
-                        <img src="img/project/09/img_3.jpg" alt="ui design">
-                    </div>
-                </div>
-                <div class="col-md-12">
-                    <span class="info">Game Icon Design</span>
-                    <p>These deformed game UI icons are used for game thumbnails.</p>
-                </div>
-                <div class="col-md-12">
-                    <div class="single-project-images">
-                        <img src="img/project/09/img_4.jpg" alt="game icons">
-                    </div>
-                </div>
-                <div class="col-md-12">
-                    <span class="info">User Badge Design</span>
-                    <p>When reaching some certain levels, users can earn one of these badges.</p>
-                </div>
-                <div class="col-md-12">
-                    <div class="single-project-images">
-                        <img src="img/project/09/img_5.jpg" alt="badges">
+                        <img src="img/project/10/img_2.jpg" alt="ui design">
                     </div>
                 </div>
             </div>
@@ -209,15 +191,10 @@
     <div class="container">
         <div class="portfolio-controls">
             <div class="btn-project forward-btn">
-                <a href="project_08.html" data-hover="Next">
+                <a href="project_09.html" data-hover="Next">
                     <i class="pe-7s-angle-right right"></i>
                 </a>
             </div>
-        </div>
-        <div class="btn-project back-btn">
-            <a href="project_10.html" data-hover="Previous">
-                <i class="pe-7s-angle-left left"></i>
-            </a>
         </div>
     </div>
 
