📝 Update skills and interests verbiage

--- a/about.html
+++ b/about.html
@@ -169,8 +169,8 @@
                         <span class="pe-7s-display1"></span>
                         <hr>
                     </div>
-                    <h4>Web Development</h4>
-                    <p>Mainly writing TypeScript for React or React Native with VS Code. I love making beautiful responsible components using flex!</p>
+                    <h4>Software Development</h4>
+                    <p>I primarily code with TypeScript for React or React Native using WebStorm. I enjoy designing clean software applications and creating beautiful, responsive components with grids.</p>
                     <br/>
                 </div>
                 <!-- Item 2 -->
@@ -180,7 +180,7 @@
                         <hr>
                     </div>
                     <h4>UI/UX Design</h4>
-                    <p>After deciding concepts and organizing ideas, I start making mockups using Sketch or XD. I also design logos, animations and icons.</p>
+                    <p>I begin with market research, gathering ideas and defining target users and concepts before building mockups in Figma. I also enjoy designing logos, animations, and icons.</p>
                     <br/>
                 </div>
                 <!-- Item 3 -->
@@ -190,7 +190,7 @@
                         <hr>
                     </div>
                     <h4>Perspectives</h4>
-                    <p>Since I’m curious, I like exploring new tools and finding its merits and how I would improve the product. This process gives me ideas to solve problems.</p>
+                    <p>My curiosity drives me to find innovative solutions to problems. I enjoy exploring new tools, evaluating their strengths, and determining how to enhance the product.</p>
                     <br/>
                 </div>
             </div>
@@ -202,7 +202,7 @@
                         <hr>
                     </div>
                     <h4>Tea & Sweets</h4>
-                    <p>Having tea always helps me concentrating on work. I’m into coconuts milk babble tea now! Collecting tea and baking sweets make me fun as well.</p>
+                    <p>I collect various tea leaves to enjoy with the pastries I bake. I'm crazy about avocado ice cream, and bubble tea is my favorite treat!</p>
                     <br/>
                 </div>
                 <!-- Item 5 -->
@@ -212,7 +212,7 @@
                         <hr>
                     </div>
                     <h4>Traveling</h4>
-                    <p>Seeing is believing. New unexpected discovery, historic remains and different cultures are what force me to travel around and to try local food.</p>
+                    <p>Seeing is believing; new discoveries, historic sites, and diverse cultures compel me to travel and try local foods.</p>
                     <br/>
                 </div>
                 <!-- Item 6 -->
@@ -222,7 +222,7 @@
                         <hr>
                     </div>
                     <h4>Video & Board Games</h4>
-                    <p>While having a fun, I feel my creativity and work efficiency polished up. Let’s play Splatoon2 together!</p>
+                    <p>Having fun with games sharpens my creativity and work efficiency. Let’s play Minecraft and Splatoon together!</p>
                     <br/>
                 </div>
             </div>
