--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                 <div class="cd-intro">
                     <div class="cd-headline clip">
                         <span class="cd-words-wrapper">
-                            <b class="is-visible">FRONTEND DEVELOPMENT</b>
+                            <b class="is-visible">SOFTWARE DEVELOPMENT</b>
                             <b>UI/UX DESIGN</b>
                             <b>CREATIVE SOLUTIONS</b>
                         </span>
@@ -335,8 +335,8 @@
                         <span class="pe-7s-display1"></span>
                         <hr>
                     </div>
-                    <h4>Web Development</h4>
-                    <p>Mainly writing TypeScript for React or React Native with VS Code. I love making beautiful responsible components using flex!</p>
+                    <h4>Software Development</h4>
+                    <p>I primarily code with TypeScript for React or React Native using WebStorm. I enjoy designing clean software applications and creating beautiful, responsive components with grids.</p>
                     <br/>
                 </div>
                 <!-- Item 2 -->
@@ -346,7 +346,7 @@
                         <hr>
                     </div>
                     <h4>UI/UX Design</h4>
-                    <p>After deciding concepts and organizing ideas, I start making mockups using Sketch or XD. I also design logos, animations and icons.</p>
+                    <p>I begin with market research, gathering ideas and defining target users and concepts before building mockups in Figma. I also enjoy designing logos, animations, and icons.</p>
                     <br/>
                 </div>
                 <!-- Item 3 -->
@@ -356,7 +356,7 @@
                         <hr>
                     </div>
                     <h4>Perspectives</h4>
-                    <p>Since I’m curious, I like exploring new tools and finding its merits and how I would improve the product. This process gives me ideas to solve problems.</p>
+                    <p>My curiosity drives me to find innovative solutions to problems. I enjoy exploring new tools, evaluating their strengths, and determining how to enhance the product.</p>
                     <br/>
                 </div>
             </div>
